--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo"><img src="images/mm_bg-removebg-preview (1).png" alt="mindmarga"  width="200" height="50" ></div>
+        <div class="logo"><img src="mm_bg-removebg-preview (1).png" alt="mindmarga"  width="200" height="50" ></div>
         <ul class="nav-links">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
