--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image:linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.6)), url("images/login_bg1.jpg");
+    background-image:linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.6)), url("login_bg1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
